# pumphouse

./: CMakeLists.txt  README.md  pumphouse paw.paw  sync.sh  tank range calc.numbers
PumphouseMgr/: CPUInfo.cpp  CPUInfo.hpp  I2C.cpp  I2C.hpp  MCP3427.cpp  MCP3427.hpp  PumpHouseAPISecretMgr.cpp  PumpHouseAPISecretMgr.hpp  PumpHouseDB.cpp  PumpHouseDB.hpp  PumpHouseDevice.h  PumpHouseMgr.cpp  PumpHouseMgr.hpp  PumpSensor.cpp  PumpSensor.hpp  PumphouseCommon.hpp  SerialStream.cpp  SerialStream.hpp  SigineerInverter.cpp  SigineerInverter.hpp  SmartShunt.cpp  SmartShunt.hpp  TCA9534.cpp  TCA9534.hpp  TMP102.cpp  TMP102.hpp  TankDepth.cpp  TankDepth.hpp  TempSensor.cpp  TempSensor.hpp
Well Pump Story/: Well-Pump monitoring.md
assets/: pumphouse.props.csv  rasberry pi.csv  valueschema.csv
pumphouse app /pumphouse/: AppDelegate.swift  AppPrefs.swift  BHButton.swift  Date+Extensions.swift  Info.plist  InfoView.storyboard  InverterHistory.storyboard  InverterHistoryViewController.swift  MainViewController.swift  PHServerManager.swift  PHtableHeaderView.swift  PHtableHeaderView.xib  PumpHistory.storyboard  PumpHistoryViewController.swift  PumpHouse.swift  PumpHouseFetcher.swift  PumpInfoViewController.swift  PumpStatusViewController.swift  PumpValueHistoryController.swift  PumpValues.storyboard  PumpValuesController.swift  SceneDelegate.swift  SetupView.storyboard  SetupViewController.swift  UIButton+Extensions.swift  Utilities.swift  View+Extensions.swift
pumphouse app /pumphouse/Assets.xcassets/AppIcon.appiconset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/ac.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/deviceIconColor.colorset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/downarrow.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/generator.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/inverter.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/panel.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/pump.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/pumphouse.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/rightarrow.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/tank.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/uparrow.imageset/: Contents.json
pumphouse app /pumphouse/Assets.xcassets/warningColor.colorset/: Contents.json
pumphouse app /pumphouse/Base.lproj/: Main.storyboard
src/: CommonIncludes.h  PumpHouseDB.cpp  PumpHouseDB.hpp  PumpHouseException.hpp  PumpHouseMgr.cpp  PumpHouseMgr.hpp  SerialStream.cpp  SerialStream.hpp  ServerCommands.hpp  ServerCommandsLineFunctions.cpp  ServerNouns.cpp  SigineerInverter.hpp  SmartShunt.cpp  TimeStamp.cpp  main.cpp
